[project]
name = "compose-containers"
version = "0.1.0"
description = "Docker/Podman Compose stack for training, and generative AI development, and solution prototyping."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pinecone[asyncio,grpc]==6.*",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.2",
]
